--- a/spring-example/build.gradle
+++ b/spring-example/build.gradle
@@ -13,6 +13,8 @@ repositories {
 
 dependencies {
     compile(project(":spring-context"))
+    // 引入aop依赖
+    compile(project(":spring-aspects"))
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
